resources/testcases_static_checks/tests/positive/isFrontierOne/simple-join.rls
../../../tests_common_data/rule-classification-examples/simple-join.rls