resources/testcases_static_checks/tests/negative/isRpc/allowingRuleApplicationsWithOnlyConstantsInFrontierBreaksMfc2.rls
../../../tests_common_data/critical-examples/allowingRuleApplicationsWithOnlyConstantsInFrontierBreaksMfc2.rls